--- a/layouts/Flex/index.html
+++ b/layouts/Flex/index.html
@@ -51,7 +51,7 @@
             <h2>Direction and Wrap</h2>
             <ul>
                 <li>Default direction is <span class="highlight">ROW</span>.</li>
-                <li><span class="highlight">WRAP</span>: allow flex items that don't fit to wrap to the next line,
+                <li><span class="highlight">WRAP</span>: allow flex items that don't fit, to wrap to the next line
                     instead of trying to fit in one line. </li>
             </ul>
 
