--- a/layouts/Flex/index.html
+++ b/layouts/Flex/index.html
@@ -45,6 +45,7 @@
         </section>
         <h1 class="title">Flex Container</h1>
         <section>
+            <h2>Define the flex container</h2>
             <p><code>display: flex;</code></p>
         </section>
         <section>
@@ -126,19 +127,14 @@
         <section>
             <h2><span style="text-decoration:underline;">SIZE</span> of an Individual Item (fixed or proportional)</h2>
             <ul>
-                <li>By default, flex distrubutes the size of each item evenly.</li>
-                <br>
+
                 <li>Set an item's width (when direction is row).</li>
                 <li>Set an item's height (when direction is column).</li>
             </ul>
             <h3 class="title left">Fixed :</h3>
             <ul>
                 <li><code>flex-basis: [number][unit];</code></li>
-                <br>
-                <ul>
-                    <li> Default value is <code class="highlight">auto</code> for all items(distributes thier size
-                        evenly).</li>
-                </ul>
+
             </ul>
 
             <h3 class="title left">Proportional :</h3>
