--- a/layouts/grid/index.html
+++ b/layouts/grid/index.html
@@ -27,6 +27,42 @@
             <ul>
                 
             </ul>
+
+            <h2>Grid Properties</h2>
+            <p>There are separate properties for:</p>
+            <ul>
+                <li>The grid container (parent element).</li>
+                <li>The grid items (children elements).</li>
+            </ul>
+        </section>
+        <section>
+            <p>Imagin grid as a table that has rows, columns, cells and lines surrounding them.</p>
+        </section>
+        <h1 class="title">Grid Container</h1>
+        <section>
+            <h2>Define the Grid Container</h2>
+            <ul><li><code>display: grid;</code></li></ul>
+        </section>
+        <section>
+            <h2>Rows/Columns Number and Size</h2>
+        </section>
+        <section>
+            <h2>Grid Areas</h2>
+            <p>A collection of adjacent cells, identified by a label. <br>
+            Later, a grid item is assigned this label to fill the designated area.</p>
+        </section>
+        <section>
+            <h2>Lines Size</h2>
+            <p>Spesifies the size of the INNER lines (lines between columns and rows not the lines forming the edge of the grid).</p>
+            <h3 class="title left">Shorthand :</h3>
+        </section>
+        <section>
+            <h2>Alignment</h2>
+            <h3 class="title left"> Align Columns Content Horizontally </h3>
+            <ul><li><code>justify-items: start | end | center | stretch;</code></li></ul>
+
+            <h3 class="title left">Align Rows Content Vertically</h3>
+            <ul><li><code>align-items: start | end | center | stretch;</code></li></ul>
         </section>
     </div>
 
