--- a/layouts/grid/index.html
+++ b/layouts/grid/index.html
@@ -73,7 +73,7 @@
         <section>
             <h2>Grid Areas</h2>
             <ul>
-                <li><code class="highlight">grid-area</code>: one or multiple adjacent <code class="highlight">grid-cells</code> identified by a given label.</li>
+                <li><code class="highlight">grid-area</code>: area of one or multiple adjacent <code class="highlight">grid-cells</code> identified by a given label.</li>
                 <li>Later, a <code class="hight">grid-item</code> can be assigned to one the <code class="highlight">grid-areas</code> to fill that portion of the grid.</li>
             </ul>
             <br>
@@ -178,7 +178,7 @@
                 to a differnt <code class="highlight">grid-cell/s</code>
                  or to a pre-defined <code class="highlight">grid-area</code>.</p> 
             <p><code class="highlight"></code></p>
-            <p><code class="highlight">grid-area</code> : one or multiple adjacent <code class="highlight">grid-cells</code> identified by a given label.</p>
+            <p><code class="highlight">grid-area</code> : area of one or multiple adjacent <code class="highlight">grid-cells</code> identified by a given label.</p>
                 <br>
         
                 <img src="./SVG/location-default.svg" style="display: block; margin: auto; width: 500px;">
