--- a/layouts/grid/index.html
+++ b/layouts/grid/index.html
@@ -42,7 +42,7 @@
         </section>
         <h1 class="title">Grid Container</h1>
         <section>
-            <h2>Define the Grid Container</h2>
+            <h2>Define the grid-container</h2>
             <ul><li><code>display: grid;</code></li></ul>
         </section>
         <section>
