--- a/layouts/grid/index.html
+++ b/layouts/grid/index.html
@@ -196,8 +196,12 @@
             <img src="./SVG/location-defined.svg" style="display: block; margin: auto; width: 500px;">
             <h3 class="title left">Shorthand</h3>
             <ul>
-                    <li>grid-column: grid-column-start grid-column-end;</li>
-                    <li>grid-row: grid-row-start grid-row-end;</li>
+                    <li><code>grid-column: grid-column-start / grid-column-end;</code></li>
+                    <li><code>grid-row: grid-row-start / grid-row-end;</code></li>
+                    <br>
+                    <li><code>grid-column: 1 / 4 ;</code></li>
+                    <li><code>grid-row: 2 / 3;</code></li>
+
                 </ul>
 
         </section>
