--- a/layouts/project-4-setup/index.html
+++ b/layouts/project-4-setup/index.html
@@ -23,15 +23,18 @@
                 layout first.
             </li>
             <br>
-            <li>For this project, GRID is used to build the layout.</li>
+            <li>For this project, GRID is used to build the larger layout. 
+                <br> FLEX is used build the layout of smaller components.</li>
             <br>
-            <li>GRID allows to build web pages that are adaptive with different screen size (desktop / small screens / mobile). </li>
+            <li>GRID and FLEX allow to build web pages that are adaptive with different screen size (desktop / small screens / mobile). </li>
            </ul>
         </section>
         <h1 class="title">3 columns layout</h1>
         <section>
             <ul>
                 <li>For large desktop screens, 3 columns layout is suitable.</li>
+                <li>As screen size reduces, so will the numbers of columns.</li>
+                <li>For now, only 3 columns layout is covered, <br> 2 and 1 column layout in the next module. </li>
             </ul>
         </section>
     </div>
