--- a/layouts/Cooks-hub/index.html
+++ b/layouts/Cooks-hub/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./app.js"></script>
+    <div class="grid-container">
+        <header>header</header>
+        <nav>nav</nav>
+        <main>
+            <img src="http://placekitten.com/200/900" alt="">
+        </main>
+        <aside>sidebar</aside>
+        <footer>footer</footer>
+    </div>
 </body>
 </html>
