--- a/layouts/Cooks-hub/style/style.css
+++ b/layouts/Cooks-hub/style/style.css
@@ -10,7 +10,7 @@
 *,*::before,*::after{
 	padding:0;
 	margin:0;
-	box-sizing: content-box;
+	box-sizing: border-box;
 	list-style: none;      /* remove bullet point from lists */
 	text-decoration:none; /* remove underline from <a> */
 	color: var(--text); 
@@ -24,12 +24,6 @@ body{
 	font-family: 'Lato', sans-serif;
 	background: var(--bg); 
 	font-size: 3rem;
-
-	/* CENTER */
-	/* display:flex; 
-	height: 100vh;
-	align-items: center;
-	justify-content: center; */
 }
 
 /* TYPOGRAPHY  */
