--- a/layouts/Cooks-hub/index.html
+++ b/layouts/Cooks-hub/index.html
@@ -14,7 +14,7 @@
         <main>
             <img src="http://placekitten.com/200/500" alt="">
         </main>
-        <aside>sidebar</aside>
+        <aside>sidebar <img src="http://placekitten.com/200/500" alt=""></aside>
         <footer>footer</footer>
     </div>
 </body>
