--- a/layouts/Cooks-hub/style/index.css
+++ b/layouts/Cooks-hub/style/index.css
@@ -1,19 +1,13 @@
 .grid-container{
     display: grid;
-    /* grid-template-columns: 1fr 3fr 1fr; */
-    grid-template-columns: 3fr 1fr;
-    /* grid-template-rows: 10vh 1fr 10vh; */
-    grid-template-rows: 10vh 10vh 1fr 10vh;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 10vh 1fr 10vh;
     place-items:stretch stretch;
-    /* grid-template-areas:
+    grid-template-areas:
       "header header  header"
       "nav    main aside"
-      "footer footer  footer";  */
-      grid-template-areas:
-      "header  header"
-      "nav     nav"
-      "main aside"
-      "footer      footer";
+      "footer footer  footer"; 
+
 }
 .grid-container > *{
     background: #909090;
@@ -27,6 +21,7 @@ nav{
 }
 main{
     grid-area: main;
+
 }
 aside{
     grid-area: aside;
