--- a/layouts/Cooks-hub/index.html
+++ b/layouts/Cooks-hub/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./style/style.css" rel="stylesheet" type="text/css"/>
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <title>Cooks Hub</title>
 </head>
 <body>
     <div class="grid-container">
-        <header>header</header>
+        <header>
+            <h1>COOKS hub</h1>
+            <div><h3>SIGNIN</h3></div>
+            <div><h3>REGISTER</h3></div>
+        </header>
         <nav>nav</nav>
         <main>
             <img src="http://placekitten.com/200/500" alt="">
