--- a/layouts/Cooks-hub/index.html
+++ b/layouts/Cooks-hub/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div class="grid-container">
-        <header>
-            <h1>COOKS hub</h1>
+        <header id="header">
+            <h1>COOKS HUB</h1>
             <div><h3>SIGNIN</h3></div>
             <div><h3>REGISTER</h3></div>
         </header>
